--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="breadcrumbs">
+            <a href="../index.html">Inicio</a> &gt; <span>Nuestros Productos</span>
+        </div>
         <div class="logo">
             <img src="../assets/Mydz_logo.png" alt="Logo de Mydz">
             <span>Mydz</span>
@@ -17,15 +19,16 @@
         <p>Nuestros Productos</p>
     </header>
     <main>
-        <section>
-            <h2>Nuestros Productos</h2>
-            <p>En Mydz, ofrecemos soluciones personalizadas en IA generativa y chatbots generativos que se adaptan a las necesidades específicas de cada cliente. Nuestros productos incluyen:</p>
-            <ul>
-                <li><strong>Chatbots Generativos Inteligentes:</strong> Sistemas conversacionales avanzados que mejoran la atención al cliente y automatizan procesos de interacción.</li>
-                <li><strong>Asistentes Corporativos IA:</strong> Herramientas diseñadas para optimizar la productividad interna mediante interfaces conversacionales intuitivas.</li>
-                <li><strong>Soluciones Personalizadas de IA Generativa:</strong> Desarrollo de aplicaciones adaptadas a industrias específicas como educación, salud, comercio electrónico y más.</li>
-            </ul>
-        </section>
+        <h2>Nuestros Productos</h2>
+        <p>En Mydz, ofrecemos soluciones personalizadas en IA generativa y chatbots generativos que se adaptan a las necesidades específicas de cada cliente. Nuestros productos incluyen:</p>
+        <ul>
+            <li><strong>Chatbots Generativos Inteligentes:</strong> Sistemas conversacionales avanzados que mejoran la atención al cliente y automatizan procesos de interacción.</li>
+            <li><strong>Asistentes Corporativos IA:</strong> Herramientas diseñadas para optimizar la productividad interna mediante interfaces conversacionales intuitivas.</li>
+            <li><strong>Soluciones Personalizadas de IA Generativa:</strong> Desarrollo de aplicaciones adaptadas a industrias específicas como educación, salud, comercio electrónico y más.</li>
+        </ul>
+        <p>Descubre nuestras soluciones innovadoras en inteligencia artificial, diseñadas para optimizar procesos y mejorar resultados.</p>
+    </section>
+        
     </main>
     <footer>
         <p>Creado por Alberto Díaz Antuña - 2025</p>
