--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="breadcrumbs">
+            <a href="../index.html">Inicio</a> &gt; <span>Contacto</span>
+        </div>
         <div class="logo">
             <img src="../assets/Mydz_logo.png" alt="Logo de Mydz">
             <span>Mydz</span>
