--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="breadcrumbs">
+            <a href="../index.html">Inicio</a> &gt; <span>Quiénes Somos</span>
+        </div>
         <div class="logo">
             <img src="../assets/Mydz_logo.png" alt="Logo de Mydz">
             <span>Mydz</span>
@@ -19,8 +21,7 @@
     <main>
         <section>
             <h2>Quiénes Somos</h2>
-            <p>Mydz es una empresa tecnológica de vanguardia fundada en 2025 en Langreo, dedicada al desarrollo de soluciones innovadoras basadas en IA generativa y chatbots generativos.</p>
-            <p>Nuestra misión es transformar la interacción digital mediante tecnologías avanzadas que potencien la creatividad, eficiencia y personalización en múltiples sectores. Creemos firmemente en el poder de la inteligencia artificial para simplificar procesos complejos y crear experiencias únicas y accesibles para todos.</p>
+            <p>En Mydz, somos líderes en innovación en inteligencia artificial, ofreciendo soluciones personalizadas para transformar negocios.</p>
         </section>
     </main>
     <footer>
