--- a/pages/talento.html
+++ b/pages/talento.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="breadcrumbs">
+            <a href="../index.html">Inicio</a> &gt; <span>Talento</span>
+        </div>
         <div class="logo">
             <img src="../assets/Mydz_logo.png" alt="Logo de Mydz">
             <span>Mydz</span>
