--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página corporativa de Mydz.">
     <title>Mydz - Innovación en IA</title>
-    <link rel="stylesheet" href="../style/estilos.css">
+    <link rel="stylesheet" href="/style/estilos.css">
 </head>
 <body>
     <header>
