--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <h2>Bienvenidos a Mydz</h2>
             <p>Explora nuestras soluciones innovadoras en inteligencia artificial y descubre cómo podemos ayudarte a transformar tu negocio.</p>
         </section>
+        <section>
+            <h2>Nuestra Visión</h2>
+            <img src="assets/imagen_index.png" alt="Imagen principal de Mydz" style="width: 100%; max-width: 800px; display: block; margin: 0 auto; border-radius: 8px;">
+            <p style="text-align: center; margin-top: 1rem;">En Mydz, trabajamos para liderar el futuro de la inteligencia artificial.</p>
+        </section>
     </main>
     <footer>
         <p>Creado por Alberto Díaz Antuña - 2025</p>
