--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -27,8 +27,27 @@
             <li><strong>Soluciones Personalizadas de IA Generativa:</strong> Desarrollo de aplicaciones adaptadas a industrias específicas como educación, salud, comercio electrónico y más.</li>
         </ul>
         <p>Descubre nuestras soluciones innovadoras en inteligencia artificial, diseñadas para optimizar procesos y mejorar resultados.</p>
-    </section>
-        
+
+        <!-- Nueva sección con tabla -->
+        <section>
+            <h3>Productos Destacados</h3>
+            <table border="1" style="width: 100%; border-collapse: collapse; text-align: left;">
+                <thead>
+                    <tr>
+                        <th style="padding: 8px; background-color: #FF6F00; color: white;">Título</th>
+                        <th style="padding: 8px; background-color: #FF6F00; color: white;">Descripción</th>
+                        <th style="padding: 8px; background-color: #FF6F00; color: white;">Enlace</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="padding: 8px;">Asistente Gimnasio</td>
+                        <td style="padding: 8px;">Chatbot especializado en atención al cliente de un gimnasio.</td>
+                        <td style="padding: 8px;"><a href="../asistente-gimnasio.html">Ver más</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
         <p>Creado por Alberto Díaz Antuña - 2025</p>
