--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -43,7 +43,7 @@
                     <tr>
                         <td style="padding: 8px;">Asistente Gimnasio</td>
                         <td style="padding: 8px;">Chatbot especializado en atención al cliente de un gimnasio.</td>
-                        <td style="padding: 8px;"><a href="../asistente-gimnasio.html">Ver más</a></td>
+                        <td style="padding: 8px;"><a href="asistente-gimnasio.html">Ver más</a></td>
                     </tr>
                 </tbody>
             </table>
