--- a/pages/asistente-gimnasio.html
+++ b/pages/asistente-gimnasio.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="breadcrumbs">
-            <a href="index.html">Inicio</a> &gt; <span>Asistente de Gimnasio</span>
+            <a href="../index.html">Inicio</a> &gt; <span>Asistente de Gimnasio</span>
         </div>
         <div class="logo">
             <img src="assets/Mydz_logo.png" alt="Logo de Mydz">
