--- a/pages/base-conocimiento.html
+++ b/pages/base-conocimiento.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="breadcrumbs">
-            <a href="index.html">Inicio</a> &gt; <span>Base de Conocimiento</span>
+            <a href="../index.html">Inicio</a> &gt; <span>Base de Conocimiento</span>
         </div>
         <div class="logo">
             <img src="assets/Mydz_logo.png" alt="Logo de Mydz" style="width: 40px; height: 40px; vertical-align: middle;">
