--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -22,6 +22,15 @@
         <section>
             <h2>Quiénes Somos</h2>
             <p>En Mydz, somos líderes en innovación en inteligencia artificial, ofreciendo soluciones personalizadas para transformar negocios.</p>
+            <h3>Misión</h3>
+            <p>En Mydz, nuestra misión es desarrollar tecnologías de IA generativa que permitan a empresas y usuarios aprovechar el poder de la inteligencia artificial de manera intuitiva y eficiente. Aspiramos a ser líderes en la creación de herramientas que potencien la creatividad, automatización y personalización en diversos sectores.</p>
+            <h3>Valores</h3>
+            <ul>
+                <li><strong>Innovación:</strong> Buscamos continuamente nuevas formas de aplicar la IA generativa para mejorar experiencias y procesos.</li>
+                <li><strong>Excelencia Técnica:</strong> Nuestro equipo está compuesto por expertos en inteligencia artificial, desarrollo de software y soluciones tecnológicas avanzadas.</li>
+                <li><strong>Colaboración:</strong> Creemos en el trabajo en equipo y en la co-creación con nuestros clientes para diseñar soluciones adaptadas a sus necesidades.</li>
+                <li><strong>Transparencia:</strong> Construimos relaciones basadas en la confianza, la ética y la claridad en todos nuestros proyectos.</li>
+            </ul>
         </section>
     </main>
     <footer>
