--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Quiénes Somos</h2>
-            <p>En Mydz, somos líderes en innovación en inteligencia artificial, ofreciendo soluciones personalizadas para transformar negocios.</p>
+            <p>Mydz es una joven compañía auqe ha apostado por desarrollar soluciones de IA generativa para sus clientes. Formada por un grupo de profesionales con sólida experiencia en el mundo TIC, y con al ambición de prestar el mejor servicio adaptado a sus necesidades.</p>
             <h3>Misión</h3>
             <p>En Mydz, nuestra misión es desarrollar tecnologías de IA generativa que permitan a empresas y usuarios aprovechar el poder de la inteligencia artificial de manera intuitiva y eficiente. Aspiramos a ser líderes en la creación de herramientas que potencien la creatividad, automatización y personalización en diversos sectores.</p>
             <h3>Valores</h3>
