--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <section>
             <h2>Bienvenidos a Mydz</h2>
             <p>Explora nuestras soluciones innovadoras en inteligencia artificial y descubre cómo podemos ayudarte a transformar tu negocio.</p>
+            <h3>Quiénes Somos</h3>
+            <p>Mydz es una joven compañía auqe ha apostado por desarrollar soluciones de IA generativa para sus clientes. Formada por un grupo de profesionales con sólida experiencia en el mundo TIC, y con al ambición de prestar el mejor servicio adaptado a sus necesidades.</p>
         </section>
         <section>
             <h2>Nuestra Visión</h2>
