--- a/pages/localizacion.html
+++ b/pages/localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página sobre la localización de Mydz.">
+    <meta name="description" content="Encuentra las oficinas de Mydz en las principales ciudades del mundo. Estamos aquí para ayudarte.">
     <title>Localización - Mydz</title>
     <link rel="stylesheet" href="../style/estilos.css">
 </head>
