--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página sobre los productos de Mydz.">
+    <meta name="description" content="Descubre los productos innovadores de Mydz en inteligencia artificial. Soluciones diseñadas para optimizar procesos y mejorar resultados.">
     <title>Nuestros Productos - Mydz</title>
     <link rel="stylesheet" href="../style/estilos.css">
 </head>
@@ -21,7 +21,7 @@
     <main>
         <h2>Nuestros Productos</h2>
         <p>En Mydz, ofrecemos soluciones personalizadas en IA generativa y chatbots generativos que se adaptan a las necesidades específicas de cada cliente. Nuestros productos incluyen:</p>
-        <ul>
+<ul>
             <li><strong>Chatbots Generativos Inteligentes:</strong> Sistemas conversacionales avanzados que mejoran la atención al cliente y automatizan procesos de interacción.</li>
             <li><strong>Asistentes Corporativos IA:</strong> Herramientas diseñadas para optimizar la productividad interna mediante interfaces conversacionales intuitivas.</li>
             <li><strong>Soluciones Personalizadas de IA Generativa:</strong> Desarrollo de aplicaciones adaptadas a industrias específicas como educación, salud, comercio electrónico y más.</li>
