--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página sobre quiénes somos en Mydz.">
+    <meta name="description" content="Conoce a Mydz, una compañía líder en inteligencia artificial. Descubre nuestra historia, misión y valores.">
     <title>Quiénes Somos - Mydz</title>
     <link rel="stylesheet" href="../style/estilos.css">
 </head>
