--- a/pages/talento.html
+++ b/pages/talento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página sobre oportunidades de talento en Mydz.">
+    <meta name="description" content="Únete al equipo de Mydz y forma parte de una empresa innovadora en inteligencia artificial.">
     <title>Talento - Mydz</title>
     <link rel="stylesheet" href="../style/estilos.css">
 </head>
