--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página corporativa de Mydz.">
-    <title>Mydz - Innovación en IA</title>
+    <meta name="description" content="Bienvenidos a Mydz, una compañía innovadora en inteligencia artificial. Descubre nuestras soluciones y cómo podemos transformar tu negocio.">
+    <title>Inicio - Mydz</title>
     <link rel="stylesheet" href="style/estilos.css">
 </head>
 <body>
@@ -26,7 +26,9 @@
         <section>
             <h2>Bienvenidos a Mydz</h2>
             <p>Explora nuestras soluciones innovadoras en inteligencia artificial y descubre cómo podemos ayudarte a transformar tu negocio.</p>
-            <h3>Quiénes Somos</h3>
+<h3>Quiénes Somos</h3>
+            <p>Mydz es una joven compañía auqe ha apostado por desarrollar soluciones de IA generativa para sus clientes. Formada por un grupo de profesionales con sólida experiencia en el mundo TIC, y con al ambición de prestar el mejor servicio adaptado a sus necesidades.</p>
+<h3>Quiénes Somos</h3>
             <p>Mydz es una joven compañía auqe ha apostado por desarrollar soluciones de IA generativa para sus clientes. Formada por un grupo de profesionales con sólida experiencia en el mundo TIC, y con al ambición de prestar el mejor servicio adaptado a sus necesidades.</p>
         </section>
         <section>
