--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página de contacto de Mydz.">
+    <meta name="description" content="Ponte en contacto con Mydz para obtener más información sobre nuestras soluciones y servicios.">
     <title>Contacto - Mydz</title>
     <link rel="stylesheet" href="../style/estilos.css">
 </head>
