base de conocimiento

--- a/base-conocimiento.html
+++ b/base-conocimiento.html
@@ -23,29 +23,25 @@
             <h2>Base de Conocimiento</h2>
             <ul>
                 <li>
-                    <span class="toggle">Comenzamos</span>
+                    <span class="toggle">Información general</span>
                     <ul>
                         <li><a href="docs/bienvenida.html" target="content-frame">Bienvenida</a></li>
-                        <li><a href="ia-aplicaciones.html" target="content-frame">Aplicaciones de la IA</a></li>
-                        <li><a href="ia-etica.html" target="content-frame">Ética en la IA</a></li>
+                        <li><a href="docs/la-compania.html" target="content-frame">La Compañía</a></li>
+                        <li><a href="docs/historia.html" target="content-frame">historia</a></li>
+                        <li><a href="docs/Grupo_Seresco.html" target="content-frame">Grupo Seresco</a></li>
+                        <li><a href="docs/oficinas-contacto.html" target="content-frame">Oficias y contacto</a></li>                      
+
                     </ul>
                 </li>
                 <li>
-                    <span class="toggle">Desarrollo Web</span>
+                    <span class="toggle">Grupo Contenido</span>
                     <ul>
                         <li><a href="html-basico.html" target="content-frame">HTML Básico</a></li>
                         <li><a href="css-avanzado.html" target="content-frame">CSS Avanzado</a></li>
                         <li><a href="javascript-fundamentos.html" target="content-frame">Fundamentos de JavaScript</a></li>
                     </ul>
                 </li>
-                <li>
-                    <span class="toggle">Recursos Adicionales</span>
-                    <ul>
-                        <li><a href="recursos-libros.html" target="content-frame">Libros Recomendados</a></li>
-                        <li><a href="recursos-cursos.html" target="content-frame">Cursos en Línea</a></li>
-                        <li><a href="recursos-herramientas.html" target="content-frame">Herramientas Útiles</a></li>
-                    </ul>
-                </li>
+                
             </ul>
         </div>
         <div class="content">
