--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="pages/localizacion.html">Localización</a>
         <a href="pages/talento.html">Talento</a>
         <a href="pages/contacto.html">Contacto</a>
+        <a href="base-conocimiento.html">Base de Conocimiento</a>
     </nav>
     <main>
         <section>
