--- a/base-conocimiento.html
+++ b/base-conocimiento.html
@@ -26,7 +26,7 @@
                     <span class="toggle">Información general</span>
                     <ul>
                         <li><a href="docs/bienvenida.html" target="content-frame">Bienvenida</a></li>
-                        <li><a href="docs/la-compania.html" target="content-frame">La Compañía</a></li>
+                        <li><a href="docs/La_Compania.html" target="content-frame">La Compañía</a></li>
                         <li><a href="docs/historia.html" target="content-frame">historia</a></li>
                         <li><a href="docs/Grupo_Seresco.html" target="content-frame">Grupo Seresco</a></li>
                         <li><a href="docs/oficinas-contacto.html" target="content-frame">Oficias y contacto</a></li>                      
