--- a/pages/nuestros-productos.html
+++ b/pages/nuestros-productos.html
@@ -45,6 +45,11 @@
                         <td style="padding: 8px;">Chatbot especializado en atención al cliente de un gimnasio.</td>
                         <td style="padding: 8px;"><a href="asistente-gimnasio.html">Ver más</a></td>
                     </tr>
+                    <tr>
+                        <td style="padding: 8px;">Asistente compañía</td>
+                        <td style="padding: 8px;">Chatbot especializado en atención a empleados de una compañía</td>
+                        <td style="padding: 8px;"><a href="asistente-compania.html">Ver más</a></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
